Fix left alignment regression of search results

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -197,6 +197,9 @@ footer > div {
   font-size: 0.95rem;
 }
 
+.left {
+  text-align: left;
+}
 .center {
   text-align: center;
 }
